# solana-proofs

./: .gitignore  Cargo.toml  README.md
data/: extracted_vkey.txt  groth16_proof.json  package_solana.json  vkey.json
src/: main.rs
