[package]
name = "twine-solana-consensus-proof-verifier"
version = "0.1.0"
edition = "2021"
default-run = "twine-solana-consensus-proof-verifier"

[[bin]]
name = "twine-solana-consensus-proof-verifier"
path = "src/main.rs"

[dependencies]
# SP1 SDK for proof verification
sp1-sdk = "4.1.3"

# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# For JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Removed other dependencies as they are no longer needed
